[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Flying.gd" type="Script" id=1]
[ext_resource path="res://Enemies/HurtAnim.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemyScenes/FlyingSprite.gd" type="Script" id=3]
[ext_resource path="res://Enemies/CriticalSpark.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 500.0

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="Animation" id=4]
resource_name = "critical"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 6, 6, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FlyingEnemy" type="KinematicBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Controller" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Controller"]

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="WallDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetect"]
shape = SubResource( 1 )

[node name="HurtAnim" parent="." instance=ExtResource( 2 )]

[node name="Visibility" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 2 )

[node name="HurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource( 3 )

[node name="Sprites" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="CriticalAnim" type="AnimationPlayer" parent="."]
anims/critical = SubResource( 4 )

[node name="CriticalSpark" parent="." instance=ExtResource( 4 )]

[node name="Alert" type="AudioStreamPlayer2D" parent="."]

[node name="Hit" type="AudioStreamPlayer2D" parent="."]

[node name="Death" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="DirectionTimer" to="." method="change_direction"]
